test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-modify-source/policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-modify-source
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
