test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-modify-source/updatedsecret.yaml
apiVersion: v1
data:
  foo: aGVyZWFyZXNvbWVjb29sY2hhbmdlcw==
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-sync-modify-source-trigger-ns
type: Opaque
