test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-modify-source/03-modifysource.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: modifysource
spec:
  timeouts: {}
  try:
  - apply:
      file: editedsource.yaml
  - assert:
      file: updatedsecret.yaml
