test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-modify-source/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: cpol-clone-sync-modify-source
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: policy.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: cloned.yaml
  - name: step-03
    try:
    - apply:
        file: editedsource.yaml
    - assert:
        file: updatedsecret.yaml
